<!--
  ~ Project:  NextGIS Tracker
  ~ Purpose:  Software tracker for nextgis.com cloud
  ~ Author:   Dmitry Baryshnikov <dmitry.baryshnikov@nextgis.com>
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright (c) 2018-2019 NextGIS <info@nextgis.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
<!--    <string name="app_name">NextGIS Tracker</string>-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="tracks">Tracks</string>
    <string name="sync">Sync</string>
    <string name="divide_tracks_by_days">Divide tracks by days</string>
    <string name="track_restore">Restore current track after reboot</string>
    <string name="send_to_web_gis"> Sync with the cloud</string>
    <string name="coord_pick_interval">Pick coordinates every …</string>
    <string name="most_frequently">Most frequently</string>
    <string name="minimum_distance">Minimum distance to pick coordinates</string>
    <string name="send_to_ngw_explanation">Automatically send tracking information to</string>
    <string name="send_to_ngw_explanation_webgis">your Web GIS.</string>
    <string name="device_id">Device ID</string>
    <string name="sync_with_ngw">Sync with web GIS</string>
    <string name="sync_interval_sec">Sync interval</string>
    <string name="max_pt_send_at_once">Max points to send at once</string>
    <string name="share_device_id">Share device ID</string>
    <string name="create_in_ngw">Create in web GIS</string>
    <string name="refresh_device_id">Refresh device identifier</string>
    <string name="refresh_device_id_message">Are you sure you want to change the device ID?
        In case the device was registered to a web GIS, the transfer of tracks will be stopped. After changing the
        device ID, it must be added to the web GIS again.</string>
    <string name="change">Change</string>
    <string name="tracker_image">Tracker image</string>
    <string name="more_menu">More menu</string>
    <string name="track_days">%d days</string>
    <string name="share_gpx">Share GPX track</string>
    <string name="share_text">Please add my tracker with ID \'%s\' to your web GIS.</string>
    <string name="share_subj">Add tracker to NextGIS Web</string>
    <string name="share_tracker_id">Share tracker ID</string>
    <string name="send_track">Send track %s</string>
    <string name="add_item">Add item</string>
    <string name="create_folder">Create folder</string>
    <string name="create_tracker_group">Create tracker group</string>
    <string name="create_tracker">Add tracker</string>
    <string name="add_instance">Add instance</string>
    <string name="resource_name">Resource name</string>
    <string name="parent_tracker">Parent should be a tracker group</string>
    <string name="parent_tracker_not">Cannot create a tracker group in this place</string>
    <string name="create_account_failed">Failed to create account</string>
    <string name="parent_folder_not">Cannot create a folder in this place</string>

    <string name="permissions">Permissions</string>
    <string name="requested_permissions">Application needs some permissions to work properly. It includes writing to external storage (to save data on card),
        access to location services and getting contacts (to create and manage web accounts).</string>
    <string name="requested_permissions_fineloc">Need fine location permission</string>


    <string name="delete">Delete</string>

    <string name="copied">Text copied to clipboard</string>

    <string name="tracker_error_header">Tracker error</string>
    <string name="tracker_error_text">Tracker is not registered on server, sending data is set to off</string>
    <string name="no_internet">No Internet connection - try later</string>
    <string name="tracker_created">Tracker is created</string>
    <string name="tracker_folder_unable_created">Failed to create tracker folder - try creating it manually: </string>
    <string name="tracker_unable_created">Failed to create tracker - try creating it manually: </string>
    <string name="create_by_manual">create manually</string>
    <string name="settings_changes">To apply changes need to restart track recording</string>
    <string name="error_export_track">Error on export track</string>
    <string name="error_save_file">Error on file save to device</string>
    <string name="save_file_complete">File has been saved</string>

    <string name="add_instance_sync">Sync with the cloud</string>
    <!-- Strings used for fragments for navigation -->

    <string name="tracker_details">NextGIS Tracker automatically collect tracks in the field and syncronize with your Web GIS in the cloud or on premise.</string>
    <string name="tracker_details_newngw"><![CDATA[If you don\'t have a Web GIS, you can get one <a href=\"https://my.nextgis.com/signup/?next=/webgis/\">here</a>]]></string>
    <string name="tracker_details_techsupport">Technical support</string>
    <string name="tracker_details_techsupport_url">support@nextgis.com</string>
    <string name="tracker_details_telegram">Telegram</string>
    <string name="tracker_details_telegram_url">"@nextgis_talks"</string>
    <string name="tracker_details_telegram_url_bin">"nextgis_talks"</string>
    <string name="tracker_details_allcontacts">All contacts</string>
    <string name="tracker_details_allcontacts_url">https://nextgis.com/contact</string>
    <string name="not_installed">Application not installed</string>

    </resources>
