<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project:  NextGIS Tracker
  ~ Purpose:  Software tracker for nextgis.com cloud
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright (c) 2019 NextGIS <info@nextgis.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="24dp"
        app:behavior_hideable="true"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/add_item"
            android:textColor="#888" />

    <TextView
            android:id="@+id/create_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_folder"
            android:drawablePadding="32dp"
            android:drawableTint="@color/grey"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:text="@string/create_folder"
            android:textColor="#000"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_map_marker_path"
            android:drawablePadding="32dp"
            android:drawableTint="@color/grey"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:text="@string/create_tracker_group"
            android:textColor="#000"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/add_tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_track"
            android:drawablePadding="32dp"
            android:drawableTint="@color/grey"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:text="@string/create_tracker"
            android:textColor="#000"
            android:textSize="16sp" />
</LinearLayout>